@@ -23,6 +23,97 @@
 #include <string.h>
 #include "libv4lconvert-priv.h"
 
+static void v4lconvert_vflip_rgbbgr24(unsigned char *src, unsigned char *dest,
+  struct v4l2_format *fmt)
+{
+  int y;
+
+  src += fmt->fmt.pix.height * fmt->fmt.pix.bytesperline;
+  for (y = 0; y < fmt->fmt.pix.height; y++) {
+    src -= fmt->fmt.pix.bytesperline;
+    memcpy(dest, src, fmt->fmt.pix.width * 3);
+    dest += fmt->fmt.pix.width * 3;
+  }
+}
+
+static void v4lconvert_vflip_yuv420(unsigned char *src, unsigned char *dest,
+  struct v4l2_format *fmt)
+{
+  int y;
+
+  /* First flip the Y plane */
+  src += fmt->fmt.pix.height * fmt->fmt.pix.bytesperline;
+  for (y = 0; y < fmt->fmt.pix.height; y++) {
+    src -= fmt->fmt.pix.bytesperline;
+    memcpy(dest, src, fmt->fmt.pix.width);
+    dest += fmt->fmt.pix.width;
+  }
+
+  /* Now flip the U plane */
+  src += fmt->fmt.pix.height * fmt->fmt.pix.bytesperline * 5 / 4;
+  for (y = 0; y < fmt->fmt.pix.height / 2; y++) {
+    src -= fmt->fmt.pix.bytesperline / 2;
+    memcpy(dest, src, fmt->fmt.pix.width / 2);
+    dest += fmt->fmt.pix.width / 2;
+  }
+
+  /* Last flip the V plane */
+  src += fmt->fmt.pix.height * fmt->fmt.pix.bytesperline / 2;
+  for (y = 0; y < fmt->fmt.pix.height / 2; y++) {
+    src -= fmt->fmt.pix.bytesperline / 2;
+    memcpy(dest, src, fmt->fmt.pix.width / 2);
+    dest += fmt->fmt.pix.width / 2;
+  }
+}
+
+static void v4lconvert_hflip_rgbbgr24(unsigned char *src, unsigned char *dest,
+  struct v4l2_format *fmt)
+{
+  int x, y;
+
+  for (y = 0; y < fmt->fmt.pix.height; y++) {
+    src += fmt->fmt.pix.width * 3;
+    for (x = 0; x < fmt->fmt.pix.width; x++) {
+      src -= 3;
+      dest[0] = src[0];
+      dest[1] = src[1];
+      dest[2] = src[2];
+      dest += 3;
+    }
+    src += fmt->fmt.pix.bytesperline;
+  }
+}
+
+static void v4lconvert_hflip_yuv420(unsigned char *src, unsigned char *dest,
+  struct v4l2_format *fmt)
+{
+  int x, y;
+
+  /* First flip the Y plane */
+  for (y = 0; y < fmt->fmt.pix.height; y++) {
+    src += fmt->fmt.pix.width;
+    for (x = 0; x < fmt->fmt.pix.width; x++)
+      *dest++ = *--src;
+    src += fmt->fmt.pix.bytesperline;
+  }
+
+  /* Now flip the U plane */
+  for (y = 0; y < fmt->fmt.pix.height / 2; y++) {
+    src += fmt->fmt.pix.width / 2;
+    for (x = 0; x < fmt->fmt.pix.width / 2; x++)
+      *dest++ = *--src;
+    src += fmt->fmt.pix.bytesperline / 2;
+  }
+
+  /* Last flip the V plane */
+  for (y = 0; y < fmt->fmt.pix.height / 2; y++) {
+    src += fmt->fmt.pix.width / 2;
+    for (x = 0; x < fmt->fmt.pix.width / 2; x++)
+      *dest++ = *--src;
+    src += fmt->fmt.pix.bytesperline / 2;
+  }
+}
+
 static void v4lconvert_rotate180_rgbbgr24(const unsigned char *src,
   unsigned char *dst, int width, int height)
 {
@@ -133,9 +224,35 @@ void v4lconvert_rotate90(unsigned char *src, unsigned char *dest,
 void v4lconvert_flip(unsigned char *src, unsigned char *dest,
   struct v4l2_format *fmt, int flags)
 {
-  /* FIXME implement separate vflipping and hflipping, for now we always
-     rotate 180 when vflip is selected! */
-  if (flags & V4LCONTROL_VFLIPPED) {
+  switch (flags & (V4LCONTROL_VFLIPPED|V4LCONTROL_HFLIPPED)) {
+
+  case V4LCONTROL_VFLIPPED:
+    switch (fmt->fmt.pix.pixelformat) {
+      case V4L2_PIX_FMT_RGB24:
+      case V4L2_PIX_FMT_BGR24:
+	v4lconvert_vflip_rgbbgr24(src, dest, fmt);
+	break;
+      case V4L2_PIX_FMT_YUV420:
+      case V4L2_PIX_FMT_YVU420:
+	v4lconvert_vflip_yuv420(src, dest, fmt);
+	break;
+    }
+    break;
+
+  case V4LCONTROL_HFLIPPED:
+    switch (fmt->fmt.pix.pixelformat) {
+      case V4L2_PIX_FMT_RGB24:
+      case V4L2_PIX_FMT_BGR24:
+	v4lconvert_hflip_rgbbgr24(src, dest, fmt);
+	break;
+      case V4L2_PIX_FMT_YUV420:
+      case V4L2_PIX_FMT_YVU420:
+	v4lconvert_hflip_yuv420(src, dest, fmt);
+	break;
+    }
+    break;
+
+  case (V4LCONTROL_VFLIPPED|V4LCONTROL_HFLIPPED):
     switch (fmt->fmt.pix.pixelformat) {
       case V4L2_PIX_FMT_RGB24:
       case V4L2_PIX_FMT_BGR24:
@@ -148,7 +265,9 @@ void v4lconvert_flip(unsigned char *src, unsigned char *dest,
 				    fmt->fmt.pix.height);
 	break;
     }
+    break;
   }
-  else /* FIXME and do nothing when only HFLIP is selected */
-    memcpy(dest, src, fmt->fmt.pix.sizeimage);
+
+  /* Our newly written data has no padding */
+  v4lconvert_fixup_fmt(fmt);
 }
