@@ -127,6 +127,8 @@ struct v4lconvert_pixfmt {
   int flags;
 };
 
+void v4lconvert_fixup_fmt(struct v4l2_format *fmt);
+
 void v4lconvert_rgb24_to_yuv420(const unsigned char *src, unsigned char *dest,
   const struct v4l2_format *src_fmt, int bgr, int yvu);
 
